Add ability to filter known issues by BDD variables (#337)